discused with priya

--- a/about-us.html
+++ b/about-us.html
@@ -37,7 +37,7 @@
                         <li class="nav-item"><a href="why-lumina.html" class="nav-link">why lumina Terra?</a></li>
                         <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">pricing</a></li> -->
                         <li class="nav-item"><a href="program.html" class="nav-link">program</a></li>
-                        <!-- <li class="nav-item"><a href="instructor.html" class="nav-link">instructor</a></li> -->
+                        <li class="nav-item"><a href="guiding-minds.html" class="nav-link">guiding minds</a></li>
                         <li class="nav-item"><a href="contact-us.html" class="nav-button">contact us</a></li>
                     </ul>
                 </div>
@@ -354,18 +354,6 @@
                     </div>
                     <div class="educational-grid-item">
                         <div class="img-wrapper">
-                            <img src="images/visionaries/aditya01.jpg" alt="" class="img-fluid">
-                        </div>
-                        <h4 class="heading-tertiary"><a href="international-committee/Aditya-Sarin.html" target="_blank">Aditya Sarin</a></h4>
-                        <div class="content-para">
-                            <p>Ministry of Education and Sports, Spain</p>
-                        </div>
-                        <div class="text-center">
-                            <a href="international-committee/Aditya-Sarin.html" target="_blank">read more</a>
-                        </div>
-                    </div>
-                    <div class="educational-grid-item">
-                        <div class="img-wrapper">
                             <img src="images/visionaries/education-02.jpg" alt="" class="img-fluid">
                         </div>
                         <h4 class="heading-tertiary"><a href="international-committee/Dr-Sunita-Gandhi.html" target="_blank">Dr. Sunita Gandhi</a></h4>
@@ -394,7 +382,7 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="contact-us.html">Admissions</a></li>
+                    <li><a href="admission.html">Admissions</a></li>
                     <li><a href="contact-us.html">Contact</a></li>
                 </ul>
             </div>
@@ -403,7 +391,7 @@
                     <!-- <li><a href="" target="_blank" style="--fclr:#557dbc;">
                         <i class="fa-brands fa-facebook-f"></i>
                     </a></li> -->
-                    <li><a href="https://wa.me/+34 653013859" target="_blank" style="--fclr:#29a71a;">
+                    <li><a href="https://wa.me/917408405000" target="_blank" style="--fclr:#29a71a;">
                         <i class="fa-brands fa-whatsapp"></i>
                     </a></li>
                     <!-- <li><a href="" target="_blank" style="--fclr:#03a9f4;">
