--- a/admission.html
+++ b/admission.html
@@ -46,15 +46,89 @@
         </div>
     </header>
     <main>
-         <section class="inner-hero-section">
+        <section class="inner-hero-section">
             <img src="images/our-facilities-bg-01.jpg" alt="" class="img-fluid">
-            <h1>competency profile</h1>
+            <h1>admissions</h1>
         </section>
-        <section class="competency-profile p-top p-bottom">
+        <section class="how-to-apply m-top m-bottom">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-9 mx-auto">
-                        <div class="img-wrapper"><img src="images/Competencial-profile-01.jpg" alt="" class="img-fluid"></div>
+                <h2 class="heading-primary">How to Apply</h2>
+                <div class="border-one"></div>
+                <div class="application-grid">
+                    <div class="application-grid-item">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h4 class="heading-tertiary">Enquiry Form Filled</h4>
+                        </div>
+                    </div>
+                    <div class="application-grid-item">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h4 class="heading-tertiary">Pay 4500 & Collect Prospectus/Dossier (includes Fee Structure)
+</h4>
+                        </div>
+                    </div>
+                    <div class="application-grid-item">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h4 class="heading-tertiary">Fill Admission Form Part 1 (Basic Info)</h4>
+                        </div>
+                    </div>
+                    <div class="application-grid-item">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h4 class="heading-tertiary">Fill Admission Form Part 2 (Child Preferences, Parenting Style)</h4>
+                        </div>
+                    </div>
+                    <div class="application-grid-item">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h4 class="heading-tertiary">Schedule Interview Slot Online</h4>
+                        </div>
+                    </div>
+                    <div class="application-grid-item">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h4 class="heading-tertiary">Attend Interview with Principal</h4>
+                        </div>
+                    </div>
+                    <div class="application-grid-item">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h4 class="heading-tertiary">Receive Message: 'Your Child Has Been Accepted'</h4>
+                        </div>
+                    </div>
+                    <div class="application-grid-item">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h4 class="heading-tertiary">Upload Required Documents (Aadhaar, Birth Certificate, TC)</h4>
+                        </div>
+                    </div>
+                    <div class="application-grid-item">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h4 class="heading-tertiary">Pay Admission Fee Online</h4>
+                        </div>
+                    </div>
+                    <div class="application-grid-item">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h4 class="heading-tertiary">Receive Message: 'Your Child Has Been Admitted'</h4>
+                        </div>
+                    </div>
+                    <div class="application-grid-item">
+                        <div class="icon"></div>
+                        <div class="content">
+                            <h4 class="heading-tertiary">Admission Complete (Child Registered)</h4>
+                        </div>
+                    </div>
+                    <div class="application-grid-item">
+                        <div class="btnone">
+                            <a href="contact-us.html" target="_blank">Book a Counselling Session</a>
+                        </div>
+                        <div class="btntwo">
+                            <a href="contact-us.html" target="_blank">Apply Now</a>
+                        </div>
                     </div>
                 </div>
             </div>
