--- a/contact-us.html
+++ b/contact-us.html
@@ -55,7 +55,7 @@
                         <li class="nav-item"><a href="why-lumina.html" class="nav-link">why lumina Terra?</a></li>
                         <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">pricing</a></li> -->
                         <li class="nav-item"><a href="program.html" class="nav-link">program</a></li>
-                        <!-- <li class="nav-item"><a href="instructor.html" class="nav-link">instructor</a></li> -->
+                        <li class="nav-item"><a href="guiding-minds.html" class="nav-link">guiding minds</a></li>
                         <li class="nav-item"><a href="contact-us.html" class="nav-button">contact us</a></li>
                     </ul>
                 </div>
@@ -78,8 +78,7 @@
                                     <span class="contact-venue__list-icon">
                                         <i aria-hidden="true" class="fas fa-map-marker-alt"></i>
                                     </span>
-                                    <span class="contact-venue__list-text">Lumina Terra School, Opposite Palassio Mall,
-                                        Lucknow, Uttar Pradesh, India, 226010</span>
+                                    <span class="contact-venue__list-text">Next to Omaxe Palace, Opp. Palassio Mall, Lucknow</span>
                                     </span>
                                 </li>
                                 <li class="contact-venue__list-item">
@@ -98,7 +97,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <iframe src="https://forms.gle/A2PqCFi7486vxwwi6" width="100%" height="3100px"
+                        <iframe src="https://forms.gle/A2PqCFi7486vxwwi6" width="100%" height="2350px"
                             style="border:none;"></iframe>
                     </div>
                 </div>
@@ -124,7 +123,7 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="contact-us.html">Admissions</a></li>
+                    <li><a href="admission.html">Admissions</a></li>
                     <li><a href="contact-us.html">Contact</a></li>
                 </ul>
             </div>
@@ -133,7 +132,7 @@
                     <!-- <li><a href="" target="_blank" style="--fclr:#557dbc;">
                         <i class="fa-brands fa-facebook-f"></i>
                     </a></li> -->
-                    <li><a href="https://wa.me/+34 653013859" target="_blank" style="--fclr:#29a71a;">
+                    <li><a href="https://wa.me/917408405000" target="_blank" style="--fclr:#29a71a;">
                             <i class="fa-brands fa-whatsapp"></i>
                         </a></li>
                     <!-- <li><a href="" target="_blank" style="--fclr:#03a9f4;">
@@ -155,3 +154,10 @@
 </body>
 
 </html>
+
+1] For now i have created 2 pages link provided here -  
+
+https://luminaterra.org/guiding-minds.html
+https://luminaterra.org/admission.html
+
+2] And also the points we have discussed yesterday and I would need more data for take the work to proceed 
