--- a/flm.html
+++ b/flm.html
@@ -149,7 +149,7 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="contact-us.html">Admissions</a></li>
+                    <li><a href="admission.html">Admissions</a></li>
                     <li><a href="contact-us.html">Contact</a></li>
                 </ul>
             </div>
@@ -158,7 +158,7 @@
                     <!-- <li><a href="" target="_blank" style="--fclr:#557dbc;">
                         <i class="fa-brands fa-facebook-f"></i>
                     </a></li> -->
-                    <li><a href="https://wa.me/+34 653013859" target="_blank" style="--fclr:#29a71a;">
+                    <li><a href="https://wa.me/917408405000" target="_blank" style="--fclr:#29a71a;">
                             <i class="fa-brands fa-whatsapp"></i>
                         </a></li>
                     <!-- <li><a href="" target="_blank" style="--fclr:#03a9f4;">
