--- a/guiding-minds.html
+++ b/guiding-minds.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="vendor/css/bootstrap.min.css">
     <link rel="stylesheet" href="vendor/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="vendor/css/owl.theme.default.css">
     <link rel="stylesheet" href="vendor/css/jquery-ui.min.css">
     <link rel="stylesheet" href="css/main.min.css">
 </head>
@@ -46,15 +47,71 @@
         </div>
     </header>
     <main>
-         <section class="inner-hero-section">
-            <img src="images/our-facilities-bg-01.jpg" alt="" class="img-fluid">
-            <h1>competency profile</h1>
+        <section class="inner-hero-section">
+            <img src="images/our-program-bg-01.jpg" alt="" class="img-fluid">
+            <h1 style="padding-bottom: 1rem;">guiding minds</h1>
         </section>
-        <section class="competency-profile p-top p-bottom">
+        <section class="ourManagement m-top">
             <div class="container">
+                <h2 class="heading-primary">our <span>management</span></h2>
+                <div class="border-one"></div>
                 <div class="row">
-                    <div class="col-md-9 mx-auto">
-                        <div class="img-wrapper"><img src="images/Competencial-profile-01.jpg" alt="" class="img-fluid"></div>
+                    <div class="col-md-4">
+                        <div class="mCard">
+                            <div class="mTeam">
+                                <img src="images/team/management/sunita-gandhi-01.jpg" alt="" class="img-fluid">
+                                <div class="mProfile">
+                                    <div class="name">dr. sunita gandhi</div>
+                                    <div class="desig">our director</div>
+                                </div>
+                            </div>
+                            <div class="btnWrapper">
+                                <a href="https://sunitagandhi.org/" target="_blank">view profile</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="mCard">
+                            <div class="mTeam">
+                                <img src="images/team/management/drbharti.jpg" alt="" class="img-fluid">
+                                <div class="mProfile">
+                                    <div class="name">dr. Bharti gandhi</div>
+                                    <div class="desig">our Mentor</div>
+                                </div>
+                            </div>
+                            <div class="btnWrapper">
+                                <a href="dr-bharti-gandhi.html" target="_blank">view profile</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="mCard">
+                            <div class="mTeam">
+                                <img src="images/team/management/BittoAgarwal.jpg" alt="" class="img-fluid">
+                                <div class="mProfile">
+                                    <div class="name">Robert Gandhi</div>
+                                    <div class="desig">&nbsp;</div>
+                                </div>
+                            </div>
+                            <div class="btnWrapper">
+                                <a href="bitto-agarwal.html" target="_blank">view profile</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="advisoryboard m-top m-bottom">
+            <div class="container">
+                <h2 class="heading-primary">Meet Our Advisory Board</h2>
+                <div class="border-one"></div>
+                <div class="col-md-3">
+                    <div class="advisory-members">
+                        <div class="img-wrapper">
+                            <img src="images/visionaries/aditya01.jpg" alt="" class="img-fluid">
+                        </div>
+                         <h4 class="heading-tertiary">Aditya Sarin</h4>
+                         <h6 class="designation">Ministry of Education and Sports, Spain</h6>
                     </div>
                 </div>
             </div>
@@ -67,9 +124,7 @@
                 <img src="images/logo.png" alt="" class="img-flui">
             </div>
             <div class="footer-text">
-                <p>At Lumina Terra, we believe learning should feel like it belongs to the child. Set in nature-rich
-                    spaces and shaped by curiosity, our approach nurtures thinkers, doers, and quiet observers alike.
-                    It’s education that grows with them — relevant, real, and rooted.</p>
+                <p>At Lumina Terra, we believe learning should feel like it belongs to the child. Set in nature-rich spaces and shaped by curiosity, our approach nurtures thinkers, doers, and quiet observers alike. It’s education that grows with them — relevant, real, and rooted.</p>
             </div>
             <div class="footer-links">
                 <ul>
@@ -78,13 +133,13 @@
                 </ul>
             </div>
             <div class="footer-social">
-                <ul>
+                 <ul>
                     <!-- <li><a href="" target="_blank" style="--fclr:#557dbc;">
                         <i class="fa-brands fa-facebook-f"></i>
                     </a></li> -->
                     <li><a href="https://wa.me/917408405000" target="_blank" style="--fclr:#29a71a;">
-                            <i class="fa-brands fa-whatsapp"></i>
-                        </a></li>
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a></li>
                     <!-- <li><a href="" target="_blank" style="--fclr:#03a9f4;">
                         <i class="fa-brands fa-twitter"></i>
                     </a></li>
