--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <li class="nav-item"><a href="why-lumina.html" class="nav-link">why lumina Terra?</a></li>
                         <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">pricing</a></li> -->
                         <li class="nav-item"><a href="program.html" class="nav-link">program</a></li>
-                        <!-- <li class="nav-item"><a href="instructor.html" class="nav-link">instructor</a></li> -->
+                        <li class="nav-item"><a href="guiding-minds.html" class="nav-link">guiding minds</a></li>
                         <li class="nav-item"><a href="contact-us.html" class="nav-button">contact us</a></li>
                     </ul>
                 </div>
@@ -91,7 +91,8 @@
                         <div class="content-wrapper">
                             <h1>LUMINA <span>TERRA</span></h1>
                             <h2>school of nations</h2>
-                            <h4>A future IB/CBSE K-12 School</h4>
+                            <h4>Upcoming K12 School | Phase 1 (2025): 2–10 Year Olds (Playgroup–Grade 5) CBSE K12 & IB
+                                DP (Grades 11 & 12) Coming Soon</h4>
                             <a href="contact-us.html">BOOK ONLINE COUNSELLING</a>
                         </div>
                     </div>
@@ -141,16 +142,20 @@
             <div class="container">
                 <div class="sustaible-grid">
                     <div class="sustaible-grid-item">
-                        <h2 class="heading-primary">The World’s Most Outstanding Sustainable School</h2>
+                        <h2 class="heading-primary">A New Dawn for Your Child’s Education</h2>
                         <div class="border-bottom"></div>
                         <div class="content-para">
-                            <p>At Lumina Terra, we redefine education as a transformative journey where sustainability,
-                                innovation, creativity, & leadership converge. Our mission is to prepare students to
-                                become global leaders & changemakers of tomorrow. Derived from Latin, Terra means Earth
-                                or land, symbolizing sustainability & a profound connection to the natural world. Nova
-                                Terra represents a “New Earth,” blending environmental stewardship with educational
-                                innovation to inspire meaningful transformation.
+                            <p>Welcome to Lumina Terra: Where Every Child Shines</p>
+                            <p>Lumina Terra School of Nations is not just a school—it’s a vibrant, sustainable, and
+                                globally inspired learning community where your child’s journey is rooted in the earth
+                                and reaches for the stars. Here, every child is seen, heard, and valued, and every day
+                                is an invitation to wonder, create, and grow.</p>
+                            <p><em>“Every leaf holds a lesson, every breeze tells a story—our classrooms are
+                                    alive.”</em><br>
+                                <em>“Education is not the filling of a pail, but the lighting of a fire.” – <strong>W.B.
+                                        Yeats</strong></em>
                             </p>
+
                             <div class="btn-wrapper"><a href="about-us.html" class="global-btn-one">about us</a></div>
                         </div>
                     </div>
@@ -173,6 +178,15 @@
         <section class="signature-strength p-top p-bottom">
             <div class="container">
                 <h2 class="heading-primary">Signature Strengths</h2>
+                <div class="border-one"></div>
+                <div class="col-md-10 mx-auto">
+                    <div class="content-para text-center">
+                        <p><strong>Skill Focus Day (Saturdays)</strong> at Lumina Terra are dedicated to immersive skill
+                            development—building creativity, innovation, leadership, resilience, and real-world
+                            problem-solving through nature, arts, science, technology, entrepreneurship, and global
+                            citizenship experiences.</p>
+                    </div>
+                </div>
                 <div class="border-one"></div>
                 <div class="signature-grid">
                     <div class="signature-grid-item">
@@ -254,6 +268,18 @@
                 </div>
             </div>
         </section>
+        <section class="acceleratinglearning m-bottom">
+            <div class="container">
+                <h2 class="heading-primary">Accelerated Learning & Technology</h2>
+                <div class="border-one"></div>
+                <ul class="primary-list">
+                    <li>Modern technology supports accelerated learning: coding labs, robotics, digital portfolios, interactive whiteboards</li>
+                    <li>Adaptive tools and personalized pathways help children master concepts deeply and move ahead naturally</li>
+                    <li>Early exposure to coding, digital citizenship, and real-world problem-solving</li>
+                    <li>Inspired by the best international systems: Singapore’s math mastery, Finland’s play and well-being focus, Norway’s inclusion, IB’s inquiry, and more</li>
+                </ul>
+            </div>
+        </section>
         <section class="leaf-hold p-top p-bottom">
             <div class="container">
                 <div class="row">
@@ -291,7 +317,7 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="contact-us.html">Admissions</a></li>
+                    <li><a href="admission.html">Admissions</a></li>
                     <li><a href="contact-us.html">Contact</a></li>
                 </ul>
             </div>
@@ -300,7 +326,7 @@
                     <!-- <li><a href="" target="_blank" style="--fclr:#557dbc;">
                         <i class="fa-brands fa-facebook-f"></i>
                     </a></li> -->
-                    <li><a href="https://wa.me/+34 653013859" target="_blank" style="--fclr:#29a71a;">
+                    <li><a href="https://wa.me/917408405000" target="_blank" style="--fclr:#29a71a;">
                             <i class="fa-brands fa-whatsapp"></i>
                         </a></li>
                     <!-- <li><a href="" target="_blank" style="--fclr:#03a9f4;">
