--- a/why-lumina.html
+++ b/why-lumina.html
@@ -38,7 +38,7 @@
                         <li class="nav-item"><a href="why-lumina.html" class="nav-link">why lumina Terra?</a></li>
                         <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">pricing</a></li> -->
                         <li class="nav-item"><a href="program.html" class="nav-link">program</a></li>
-                        <!-- <li class="nav-item"><a href="instructor.html" class="nav-link">instructor</a></li> -->
+                        <li class="nav-item"><a href="guiding-minds.html" class="nav-link">guiding minds</a></li>
                         <li class="nav-item"><a href="contact-us.html" class="nav-button">contact us</a></li>
                     </ul>
                 </div>
@@ -63,7 +63,8 @@
                         <h2 class="heading-primary">lumina terra students are prepared for the real world</h2>
                         <div class="content-para">
                             <p>We empower students to face and to take on today's and tomorrow’s challenges.</p>
-                            <p>We have developed a <a href="competency-profile.html" class="internal-link">competency profile</a> that covers five different transformations and
+                            <p>We have developed a <a href="competency-profile.html" class="internal-link">competency
+                                    profile</a> that covers five different transformations and
                                 sub-competences, with the aim of promoting a transformative, holistic education that has
                                 an impact both on our students’ learning and on the world.</p>
                             <p>Our purpose as an education group at the forefront of global education is materialised
@@ -187,6 +188,76 @@
                 </div>
             </div>
         </section>
+        <section class="whyluminafour m-top p-top p-bottom">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-md-5">
+                        <div class="img-wrapper">
+                            <img src="images/whylumina/why-lumina-04.jpg" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-md-7">
+                        <h2 class="heading-primary">A Rounded, World-Class Education</h2>
+                        <div class="content-para">
+                            <p>Inspired by the Best, Designed for Your Child</p>
+                            <p>Lumina Terra draws from the world’s top education systems—Singapore, Finland, Norway,
+                                China, and the International Baccalaureate (IB)—to create a curriculum that is advanced,
+                                holistic, and future-ready. We blend mastery learning, play-based and inquiry-based
+                                approaches, strong STEM and arts, bilingualism, and a deep focus on well-being and
+                                character.</p>
+                            <p><strong>Our international committee brings together leading educators, innovators, and
+                                    sustainability experts from around the world. Their collective experience shapes a
+                                    curriculum that is advanced, holistic, and always evolving—ensuring your child
+                                    benefits from the best ideas in global education.</strong></p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="keyfeatiures m-top">
+            <div class="container">
+                <h2 class="heading-primary text-center">Key Features That Make Lumina Terra Unique and Comprehensive
+                </h2>
+                <div class="border-one"></div>
+                <ul class="primary-list">
+                    <li><strong>Truly individualized learning:</strong> Each child’s path is personalized, adaptive, and mastery-based,
+                        enabling natural acceleration up to two grades ahead</li>
+                    <li><strong>Holistic development:</strong> Academics, arts, life skills, well-being, and global citizenship are woven
+                        together daily.</li>
+                    <li><strong>No-bag, joyful learning:</strong> All materials are provided; learning is hands-on, project-based, and
+                        deeply engaging.</li>
+                    <li><strong>Small class sizes:</strong> Every child is known, valued, and celebrated.</li>
+                    <li><strong>Innovative, evidence-based teaching:</strong> Blending global best practices with Indian values and local
+                        context.</li>
+                    <li><strong>Real-world skills:</strong> Financial literacy, coding, public speaking, teamwork, and leadership are
+                        built in from the start.</li>
+                    <li><strong>Community and celebration:</strong> Regular events, performances, and exhibitions connect learning to
+                        life.</li>
+                    <li><strong>Diversity and inclusion:</strong> Children learn with and from peers of all backgrounds, preparing them
+                        for a connected world.</li>
+                    <li><strong>Future-ready:</strong> Focus on digital literacy, critical thinking, and adaptability for success in
+                        exams, careers, and life.</li>
+                </ul>
+            </div>
+        </section>
+        <section class="global-practice m-top m-bottom">
+            <div class="container">
+                <h2 class="heading-primary text-center">How Lumina Terra Integrates Global Best Practices</h2>
+                <div class="border-one"></div>
+                <ul class="primary-list">
+                    <li><strong>Curriculum draws from Singapore’s math mastery, Finland’s play and well-being focus, Norway’s inclusion, IB’s inquiry, and more12.</strong></li>
+                    <li><strong>Blended learning methods:</strong> Combining Montessori, Reggio Emilia, and Waldorf approaches for child-led, creative, and holistic growth3.</li>
+                    <li><strong>STEAM and ESTEAM:</strong> Science, Technology, Engineering, Arts, Math, and Entrepreneurship are integrated at every stage.</li>
+                    <li><strong>Learning Lounges:</strong> Age-appropriate, flexible environments inspired by global “learning lounge” models, supporting independence and curiosity.</li>
+                    <li><strong>Guided by global experts:</strong> The international advisory committee ensures the curriculum is always evolving and benchmarked against the world’s best.</li>
+                    <li><strong>Socratic discussions and project-based learning:</strong> Fostering critical thinking, independence, and lifelong curiosity.</li>
+                    <li><strong>Personalized, self-paced learning:</strong> Adaptive technology and mastery-based progression for every learner.</li>
+                    <li><strong>Active, engaged learning:</strong> Emphasis on real-world challenges, hands-on projects, and collaborative problem-solving.</li>
+
+                </ul>
+            </div>
+        </section>
     </main>
 
     <footer class="p-top p-bottom">
@@ -201,7 +272,7 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="contact-us.html">Admissions</a></li>
+                    <li><a href="admission.html">Admissions</a></li>
                     <li><a href="contact-us.html">Contact</a></li>
                 </ul>
             </div>
@@ -210,7 +281,7 @@
                     <!-- <li><a href="" target="_blank" style="--fclr:#557dbc;">
                         <i class="fa-brands fa-facebook-f"></i>
                     </a></li> -->
-                    <li><a href="https://wa.me/+34 653013859" target="_blank" style="--fclr:#29a71a;">
+                    <li><a href="https://wa.me/917408405000" target="_blank" style="--fclr:#29a71a;">
                             <i class="fa-brands fa-whatsapp"></i>
                         </a></li>
                     <!-- <li><a href="" target="_blank" style="--fclr:#03a9f4;">
